@@ -134,5 +134,7 @@ po/de.po
 po/it.po
 po/cs.po
 po/no.po
+po/fr.po
+po/ru.po
 po/update.sh
 
