@@ -16,6 +16,8 @@ Revision history for Gimp-Perl extension.
         - applied libintl fix by yasuhiro@awa.tohoku.ac.jp.
         - applied save_image/PNG-noextra switch patch by pkaempf@box.echo.ch.
         - applied Perl-Server reuseaddress fix by gphan@webjuice.com.
+        - corrected the libintl fix to really work.
+        - added fr and ru translations.
 
 1.19  Thu Jan  6 00:21:58 CET 2000
         - used N_ to mark all the menu paths, since gimp now tries to
